--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -228,7 +228,13 @@ Some of our team regularly add:
 3.  If using SpaDES, use cache at the event level, if the event is
     non-stochastic
 
-<!-- NEVER CACHE SIMINIT()-->
+4. Don't cache a `simInit` call -- instead implement internal caching in the modules
+   and use event caching. See [`vignette(topic = "iii-cache", package = "SpaDES.core")`](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
+   
+## See also
+
+[`SpaDES.core` vignette on caching](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
+
 ## Barebones R script
 
 ```{r}
