--- a/training/debugging.qmd
+++ b/training/debugging.qmd
@@ -23,7 +23,7 @@ See [Barebones R script] for the code shown in this chapter
 #| eval: true
 #| purl: false
 
-## truncate text output
+# truncate text output
 hook_output <- knitr::knit_hooks$get("output")
 
 knitr::knit_hooks$set(output = function(y, options) {
@@ -84,7 +84,9 @@ myFun <- function(x, y) {
 }
 
 myFun(runif(20), "A")
+```
 
+```
 # > myFun(runif(20), "A")
 # Called from: myFun(runif(20), "A")
 # Browse[1]> x
@@ -93,6 +95,7 @@ myFun(runif(20), "A")
 # Browse[1]> y
 #  [1] "A"
 ```
+
 
 From the above we would quickly realise we were trying to add a numeric
 vector with a character vector, which obviously doesn't work.
