--- a/training/workflowSimple2.qmd
+++ b/training/workflowSimple2.qmd
@@ -21,7 +21,7 @@ See [Barebones R script] for the code shown in this chapter
 #| include: false
 #| purl: false
 
-## truncate text output
+# truncate text output
 hook_output <- knitr::knit_hooks$get("output")
 
 knitr::knit_hooks$set(output = function(y, options) {
